# cuda-matrix-add

./: CMakeLists.txt  README.md
include/: matrix.hpp
scripts/: nsys_easy.sh  run.sh
src/: main.cpp  matrix.cpp  matrix_add.cu
tests/: test_matrix_add.cpp
